# weave

./: .gitattributes  .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build-release.sh  install-mcp.sh  install.sh  pyproject.toml  sonar-project.properties
.claude/agents/: AGENTS.md  epic-planner.md  learning-curator.md  weave-guide.md
.claude/hooks/: bash-dedup-post.sh  bash-dedup.sh  context-guard.sh  post-edit-lint.sh  pre-action.sh  (+9 more)
.github/: copilot-instructions.md
.weave/: breadcrumbs.md  nodes.jsonl  state.sql
contracts/: README.md  STATIC-PARITY-v1.md  canonical-json-v1.json  checkpoint-current-v1.schema.json  checkpoint-generation-v1.schema.json  checkpoint-manifest-v1.schema.json  checkpoint-stage-v1.schema.json  cli-compat-v1.json  cli-compat-v1.schema.json  delta-operation-v2.schema.json  durability-v1.schema.json  error-catalog-v1.json  errors-v1.schema.json  evidence-v1.schema.json  hook-events-v1.schema.json  legacy-delta-catalog-v1.schema.json  node-field-registry-v1.json  operation-payloads-v1.schema.json  operations-v1.json  operations-v1.schema.json  ownership-v1.json  policy-reason-catalog-v1.json  policy-v1.schema.json  protocol-v1.schema.json
docs/: DEVELOPMENT.md
mcp/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: context-guard.sh  gen-procedures.sh  migrate-learnings.py  project-procedures.sh  resolve-refs.sh  sync-weave-gh.sh  wv  wv-test
templates/: AGENTS.md.template  CLAUDE.md.template  Makefile.template  PLAN.md.template  TOPOLOGY-ENRICH.json.template  WORKFLOW.md  ci-weave-paths-ignore.snippet.yml  copilot-instructions.stub.md  test-impacted.sh.template  workflow-classes.conf
tests/: README.md  run-all.sh  test-agent-identity-parity.sh  test-analyze.sh  test-battery-wrapper.sh  test-cache-invalidation.sh  test-checkpoint-generation.sh  test-cmd-battery.sh  test-codex-hooks.sh  test-concurrent-session.sh  test-config.sh  test-core.sh  test-crash-sentinel.sh  test-data.sh  test-delta-catalog.sh  test-delta-unit.sh  test-delta-v2-replay.sh  test-delta-v2-writer.sh  test-durability.sh  test-gh-issue-body-bug.sh  test-gh-stress.sh  test-graph.sh  test-guide-procedure.sh  test-health.sh  test-hook-common.sh  test-hook-dispatch.sh  test-hook-suite-cwd.sh  test-hooks.sh  test-init-repo.sh  test-install-ast-grep.sh  test-install-file.sh  test-ipc-contract.sh  test-journal.sh  test-mcp-parity.sh  test-memory.sh  test-multi-agent.sh  test-output-budget.sh  test-pattern-audit-check1.sh  test-pattern-audit-check6.sh  test-pattern-audit-check7.sh  (+64 more)
(+187 files in other folders)
