[project]
name = "weave-workflow"
version = "1.28.5"
description = "Token-optimized memory system for agentic workflows"
authors = [
    {name = "AGM1968",email = "AGM1968@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["scripts"]
omit = ["scripts/*.py", "scripts/*.sh"]

[tool.coverage.report]
relative_files = true

[tool.bandit]
# B101: assert_used — safe in tests; B404: subprocess import warning — too noisy.
# B602: shell=True subprocess — hard-fail if regressed (we fixed CWE-78 in Sprint 2a).
# B603: subprocess without shell=True — expected for intentional CLI wrappers.
# B607: partial executable path — expected for "wv" binary name.
skips = ["B101", "B404"]

